# textual-chat

./: pyproject.toml
elia_chat/: app.py  elia.scss
elia_chat/database/: models.py
elia_chat/widgets/: chat.py  chat_options.py  chatbox.py
