[tool.poetry]
name = "elia-chat"
version = "0.5.0"
description = "A terminal interface to ChatGPT."
authors = ["Darren Burns <darrenb900@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
anthropic = "^0.19.1"
python = "3.10.11"
openai = "^0.27.5"
textual = "0.46.0"
# textual = { path = "../textual", develop = true}
sqlmodel = "^0.0.8"
humanize = "^4.6.0"
tiktoken = "^0.6.0"
transformers = "^4.38.2"
click = "^8.1.6"
langchain = "^0.1.11"
langchain_anthropic = "^0.1.3"

[tool.poetry.scripts]
elia = "elia_chat.__main__:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
types-peewee = "^3.16.0.0"
pre-commit = "^3.3.2"
textual-dev = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
